src/test/deca/syntax/invalid/numberTooLarge.deca
// Description:
//    Programme assign number too large
//
// Resultats:
//    syntax errpr
//
// Historique:
//    cree le 01/01/2022

{
        //int c = 1111111111111111111111111111111111111111111111111111111111111111;
        float f = 999999999999999999999999999999999999999999999.9999999999999999999999999999999;
}
